@@ -87,7 +87,6 @@ pageMod.PageMod({
         img_ico_steamdb: data.url('img/ico/steamdb.png'),
         img_ico_steamgifts: data.url('img/ico/steamgifts.png'),
         img_ico_steamrep: data.url('img/ico/steamrep.png'),
-        img_ico_steamtrades: data.url('img/ico/steamtrades.png'),
         img_ico_achievementstats_col: data.url('img/ico/achievementstats_col.png'),
         img_ico_astatsnl_col: data.url('img/ico/astatsnl_col.png'),
         img_ico_backpacktf_col: data.url('img/ico/backpacktf_col.png'),
